add wallet logic