@@ -1,9 +1,10 @@
-package com.springreactoauth2.server.chat.service;
+package com.springreactoauth2.server.chatBck.service;
 
-import com.springreactoauth2.server.chat.dtos.ChatMessageDTO;
-import com.springreactoauth2.server.chat.dtos.PaginatedChatMessagesDTO;
-import com.springreactoauth2.server.chat.model.ChatMessage;
-import com.springreactoauth2.server.chat.repository.ChatMessageRepository;
+import com.springreactoauth2.server.chatBck.dtos.ChatMessageDTO;
+import com.springreactoauth2.server.chatBck.dtos.PaginatedChatMessagesDTO;
+import com.springreactoauth2.server.chatBck.model.ChatMessage;
+import com.springreactoauth2.server.chatBck.repository.ChatMessageRepository;
+import com.springreactoauth2.server.user.dto.UserDto;
 import com.springreactoauth2.server.user.model.User;
 import com.springreactoauth2.server.user.repository.UserRepository;
 import org.modelmapper.ModelMapper;
@@ -28,7 +29,7 @@ public class ChatMessageService {
     @Autowired
     private ModelMapper modelMapper;
 
-    public PaginatedChatMessagesDTO getChatHistory(final String sentBy, final String sentTo, final int pageNumber) throws UserNotFoundException, Exception {
+    public PaginatedChatMessagesDTO getChatHistory(final String sentBy, final String sentTo, final int pageNumber) throws Exception, Exception {
         final User sentByUser = userRepository.findByEmail(sentBy).orElse(null);
         final Optional<User> sendToUser = userRepository.findByEmail(sentTo);
         if (sendToUser.isPresent()) {
@@ -39,7 +40,7 @@ public class ChatMessageService {
             final List<ChatMessageDTO> messages = chatMessages.stream().map(chatMessage ->
                     ChatMessageDTO.builder().message(chatMessage.getContent())
                             .sentAt(chatMessage.getSentAt().atZone(ZoneId.of("UTC")))
-                            .email(chatMessage.getSentBy().getEmail()).build()).toList();
+                            .email(chatMessage.getSentBy().getEmail()).build()).collect(Collectors.toList());
             return PaginatedChatMessagesDTO.builder().numPages(chatMessages.getTotalPages()).chatMessages(messages).build();
         } else {
             throw new Exception();
@@ -47,23 +48,24 @@ public class ChatMessageService {
     }
 
 
-    public void saveChatHistory(final String sentBy, final String sentTo, final String content) throws UserNotFoundException {
-        final User sentByUser = userRepository.findByUsername(sentBy);
-        final Optional<User> sendToUser = Optional.ofNullable(userRepository.findByUsername(sentTo));
-        if (sendToUser.isEmpty()) {
-            throw new UserNotFoundException();
+    public void saveChatHistory(final String sentBy, final String sentTo, final String content) throws Exception {
+        final User sentByUser = userRepository.findByEmail(sentBy).orElse(null);
+        final Optional<User> sendToUser = userRepository.findByEmail(sentTo);
+        if (sendToUser.isPresent()) {
+            final ChatMessage chatMessage = new ChatMessage();
+            chatMessage.setContent(content);
+            chatMessage.setSentBy(sentByUser);
+            chatMessage.setSentTo(sendToUser.get());
+            chatMessageRepository.save(chatMessage);
+        } else {
+            throw new Exception();
         }
-        final ChatMessage chatMessage = new ChatMessage();
-        chatMessage.setContent(content);
-        chatMessage.setSentBy(sentByUser);
-        chatMessage.setSentTo(sendToUser.get());
-        chatMessageRepository.save(chatMessage);
     }
 
-    public List<UserDTO> getUsersWithChatHistory(final String userName) {
-        final User user = userRepository.findByUsername(userName);
+    public List<UserDto> getUsersWithChatHistory(final String userName) {
+        final User user = userRepository.findByEmail(userName).orElse(null);
         final List<Long> userIds = chatMessageRepository.getDistinctUsersBySentByOrSentAt(user.getId());
         final List<User> users = userRepository.findAllById(userIds);
-        return users.stream().map(userEntity -> modelMapper.map(userEntity, UserDTO.class)).collect(Collectors.toList());
+        return users.stream().map(userEntity -> modelMapper.map(userEntity, UserDto.class)).collect(Collectors.toList());
     }
 }
